crates/plotnik-lib/tests/05-typegen/definitions/error_uncaptured_output_with_captured_siblings.txt
A = [X: (identifier)]
Q = (program (A) (debugger_statement) @name)
==== diagnostics ====
error: output-producing expression requires capture when siblings have captures
 --> query.ptk:2:14
  |
2 | Q = (program (A) (debugger_statement) @name)
  |              ^^^
  |
help: add `@name` to capture the output
